{{cookiecutter.project_slug}}/_/deployment/python/deployment/kubernetes/application/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "${APPLICATION_NAME}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: "${APPLICATION_NAME}"
    spec:
      containers:
      - name: django
        image: IMAGE
        ports:
        - name: uwsgi
          containerPort: 8000
        livenessProbe:
          tcpSocket:
            port: uwsgi
          initialDelaySeconds: 13
        readinessProbe:
          tcpSocket:
            port: uwsgi
          initialDelaySeconds: 9
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
      - name: nginx
        image: IMAGE
        command: ['nginx']
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 13
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 9
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 64Mi
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  name: "${APPLICATION_NAME}"
              topologyKey: kubernetes.io/hostname
