{{cookiecutter.project_slug}}/_/deployment/python/deployment/kubernetes/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${APPLICATION_NAME}"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
