{{cookiecutter.project_slug}}/_/deployment/python/deployment/kubernetes/application/base/route.yaml
kind: Route
apiVersion: v1
metadata:
  name: "${APPLICATION_NAME}"
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: "${APPLICATION_NAME}"
